--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
           <span class="input-title">Receive messages</span>
         </span>
       </div>
+      <div>
+        <button>Get estimate</button>
+      </div>
+      <div class="card">
+        <div class="card-cost">
+          <div>
+            <div class="sub-text">Send messages at</div>
+            <div class="main-text">$0.0050</div>
+            <div class="small-text">estimated cost</div>
+          </div>
+          <div>
+            <div class="sub-text">Receive messages at</div>
+            <div class="main-text">$0.0050</div>
+            <div class="small-text">estimated cost</div>
+          </div>
+          </div>
+      </div>
+      <div>
+          <button>View Pricing</button>
+        </div>
     </div>
   </div>
   </div>
