--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <span class="input-title">Receive messages</span>
         </span>
       </div>
+      <div class="tag-container">
+        <span>Tag 1</span>
+      </div>
       <div>
         <button>Get estimate</button>
       </div>
@@ -60,7 +63,12 @@
       </div>
       <div>
           <button>View Pricing</button>
-        </div>
+      </div>
+      <div class="contact-form">
+        <form>
+          
+        </form>
+      </div>
     </div>
   </div>
   </div>
