--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Plivo App</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
+  </script>
+
   <link rel="stylesheet" href="style.css" />
 
   <script src="https://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
@@ -20,7 +30,7 @@
       <h2>Flexible pricing model for your needs</h2>
       <h4>Select your contries on the map to begin</h4>
 
-      <div id="mapdiv" style="width: 80%; height: 450px;"></div>
+      <div id="mapdiv" style="width: 100%; height: 450px; margin: 40px 0;"></div>
       <h4>
         Choose your SMS services for the selected countries to get an estimate
       </h4>
@@ -59,14 +69,38 @@
             <div class="main-text">$0.0050</div>
             <div class="small-text">estimated cost</div>
           </div>
-          </div>
+        </div>
       </div>
       <div>
-          <button>View Pricing</button>
+        <button>View Pricing</button>
       </div>
       <div class="contact-form">
+
         <form>
-          
+          <div class="row form-group">
+            <div class="col-md-6">
+              <label>First Name</label>
+              <input type="text" class="form-control" name="first_name" placeholder="Jane">
+            </div>
+            <div class="col-md-6">
+              <label>Last Name</label>
+              <input type="text" class="form-control" name="last_name" placeholder="Doe">
+            </div>
+          </div>
+          <div class="form-group">
+            <label>Work Email</label>
+            <input type="email" class="form-control" name="email_id" placeholder="jane.doe@example.com">
+          </div>
+          <div class="form-group">
+            <label>Phone Number</label>
+            <input type="number" class="form-control" name="phone_no" placeholder="888-888-8888">
+          </div>
+          <div class="form-group">
+            <label>Description</label>
+            <textarea class="form-control" placeholder="Please tell us about your requirements in detail"
+              rows="3"></textarea>
+          </div>
+          <button type="submit">Contact Sales</button>
         </form>
       </div>
     </div>
@@ -77,9 +111,3 @@
 </body>
 
 </html>
-
-
-<!-- <label><input type="checkbox" value="send" name="sms" />
-        Send messages</label>
-    <label><input type="checkbox" value="receive" name="sms" />
-        Receive messages</label> -->
