Map interactivity added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <span class="input-title">Receive messages</span>
         </span>
       </div>
-      <div class="tag-container">
+      <div id="selected" class="tag-container">
         <span>Tag 1</span>
       </div>
       <div>
