Data binded to view

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
       <div class="card-cost">
         <div>
           <div class="sub-text">Send messages at</div>
-          <div class="main-text">$0.00</div>
+          <div id="send-value" class="main-text">$0.00</div>
           <div class="small-text">estimated cost</div>
         </div>
         <div>
           <div class="sub-text">Receive messages at</div>
-          <div class="main-text">$0.00</div>
+          <div id="receive-value" class="main-text">$0.00</div>
           <div class="small-text">estimated cost</div>
         </div>
       </div>
