--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Plivo App</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css"
+    rel="stylesheet" />
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
@@ -25,6 +29,9 @@
   <script src="https://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
   <script src="https://www.amcharts.com/lib/3/maps/js/worldHigh.js" type="text/javascript"></script>
   <script src="https://www.amcharts.com/lib/3/themes/dark.js" type="text/javascript"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.min.js"
+    type="text/javascript"></script>
 </head>
 
 <body>
@@ -70,6 +77,11 @@
           <div id="receive-value" class="main-text">$0.00</div>
           <div class="small-text">estimated cost</div>
         </div>
+      </div>
+      <div class="slider-container">
+        <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="500"
+          data-slider-max="2500" data-slider-step="1" data-slider-value="0" data-slider-ticks="[500, 1000, 1500, 2000]"
+          data-slider-ticks-labels='["1-500", "500-1000", "1000-2000", "2000+"]' />
       </div>
     </div>
     <div>
