CTA binded to slider event

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div>
-      <button>View Pricing</button>
+      <button id="slider-cta">View Pricing</button>
     </div>
     <div class="contact-form">
       <form>
