CTA working updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <span>SMS Services: </span>
       <span>
         <label class="checkbox-label">
-          <input type="checkbox" value="receive" name="sms" />
+          <input type="checkbox" value="receive" name="sms"/>
           <span class="checkbox-custom"></span>
         </label>
         <span class="input-title">Send messages</span>
@@ -64,7 +64,7 @@
     </div>
     
     <div>
-      <button  data-toggle="collapse" href="#cost-container" aria-expanded="false" aria-controls="cost-container"  onclick="getEstimate()">Get estimate</button>
+      <button disabled data-toggle="collapse" href="#cost-container" aria-expanded="false" aria-controls="cost-container" id="estimate-cta" onclick="getEstimate()">Get estimate</button>
     </div>
     
     <div class="collapse" id="cost-container">    
@@ -88,8 +88,8 @@
       </div>
     </div>
     <div>
-        <button  data-toggle="collapse" href="#form-container" aria-expanded="false" aria-controls="form-container" id="slider-cta">View Pricing</button>
-      </div>
+        <button data-toggle="collapse" href="#form-container" aria-expanded="false" aria-controls="form-container" id="slider-cta">View Pricing</button>
+    </div>
     </div>
 
     <div class="collapse" id="form-container">   
