--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       <span>SMS Services: </span>
       <span>
         <label class="checkbox-label">
-          <input type="checkbox" value="receive" name="sms"/>
+          <input id="sendCheck" type="checkbox" value="receive" name="sms"/>
           <span class="checkbox-custom"></span>
         </label>
         <span class="input-title">Send messages</span>
       </span>
       <span>
         <label class="checkbox-label">
-          <input type="checkbox" value="send" name="sms">
+          <input id="receiveCheck" type="checkbox" value="send" name="sms">
           <span class="checkbox-custom"></span>
         </label>
         <span class="input-title">Receive messages</span>
