--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <span>SMS Services: </span>
       <span>
         <label class="checkbox-label">
-          <input id="sendCheck" type="checkbox" value="receive" name="sms"/>
+          <input id="sendCheck" type="checkbox" value="receive" name="sms" />
           <span class="checkbox-custom"></span>
         </label>
         <span class="input-title">Send messages</span>
@@ -62,66 +62,68 @@
     </div>
     <div id="selected" class="tag-container">
     </div>
-    
+
     <div>
-      <button disabled data-toggle="collapse" href="#cost-container" aria-expanded="false" aria-controls="cost-container" id="estimate-cta" onclick="getEstimate()">Get estimate</button>
-    </div>
-    
-    <div class="collapse" id="cost-container">    
-      <div class="card">
-      <div class="card-cost">
-        <div>
-          <div class="sub-text">Send messages at</div>
-          <div id="send-value" class="main-text">$0.00</div>
-          <div class="small-text">estimated cost</div>
-        </div>
-        <div>
-          <div class="sub-text">Receive messages at</div>
-          <div id="receive-value" class="main-text">$0.00</div>
-          <div class="small-text">estimated cost</div>
-        </div>
-      </div>
-      <div class="slider-container">
-        <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="500"
-          data-slider-max="2500" data-slider-step="1" data-slider-value="0" data-slider-ticks="[500, 1000, 1500, 2000]"
-          data-slider-ticks-labels='["1-500", "500-1000", "1000-2000", "2000+"]' />
-      </div>
-    </div>
-    <div>
-        <button data-toggle="collapse" href="#form-container" aria-expanded="false" aria-controls="form-container" id="slider-cta">View Pricing</button>
-    </div>
+      <button disabled data-toggle="collapse" href="#cost-container" aria-expanded="false"
+        aria-controls="cost-container" id="estimate-cta" onclick="getEstimate()">Get estimate</button>
     </div>
 
-    <div class="collapse" id="form-container">   
-    <div class="contact-form">
-      <form>
-        <div class="row form-group">
-          <div class="col-md-6">
-            <label>First Name</label>
-            <input type="text" class="form-control" name="first_name" placeholder="Jane">
+    <div class="collapse" id="cost-container">
+      <div class="card">
+        <div class="card-cost">
+          <div>
+            <div class="sub-text">Send messages at</div>
+            <div id="send-value" class="main-text">$0.00</div>
+            <div class="small-text">estimated cost</div>
           </div>
-          <div class="col-md-6">
-            <label>Last Name</label>
-            <input type="text" class="form-control" name="last_name" placeholder="Doe">
+          <div>
+            <div class="sub-text">Receive messages at</div>
+            <div id="receive-value" class="main-text">$0.00</div>
+            <div class="small-text">estimated cost</div>
           </div>
         </div>
-        <div class="form-group">
-          <label>Work Email</label>
-          <input type="email" class="form-control" name="email_id" placeholder="jane.doe@example.com">
+        <div class="slider-container">
+          <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="500"
+            data-slider-max="2500" data-slider-step="1" data-slider-value="0"
+            data-slider-ticks="[500, 1000, 1500, 2000]"
+            data-slider-ticks-labels='["1-500", "500-1000", "1000-2000", "2000+"]' />
         </div>
-        <div class="form-group">
-          <label>Phone Number</label>
-          <input type="number" class="form-control" name="phone_no" placeholder="888-888-8888">
-        </div>
-        <div class="form-group">
-          <label>Description</label>
-          <textarea class="form-control" placeholder="Please tell us about your requirements in detail"
-            rows="3"></textarea>
-        </div>
-        <button type="submit">Contact Sales</button>
-      </form>
+      </div>
+      <div>
+        <button id="slider-cta">View Pricing</button>
+      </div>
     </div>
-  </div>
+
+    <div class="collapse" id="form-container">
+      <div class="contact-form">
+        <form>
+          <div class="row form-group">
+            <div class="col-md-6">
+              <label>First Name</label>
+              <input type="text" class="form-control" name="first_name" placeholder="Jane">
+            </div>
+            <div class="col-md-6">
+              <label>Last Name</label>
+              <input type="text" class="form-control" name="last_name" placeholder="Doe">
+            </div>
+          </div>
+          <div class="form-group">
+            <label>Work Email</label>
+            <input type="email" class="form-control" name="email_id" placeholder="jane.doe@example.com">
+          </div>
+          <div class="form-group">
+            <label>Phone Number</label>
+            <input type="number" class="form-control" name="phone_no" placeholder="888-888-8888">
+          </div>
+          <div class="form-group">
+            <label>Description</label>
+            <textarea class="form-control" placeholder="Please tell us about your requirements in detail"
+              rows="3"></textarea>
+          </div>
+          <button type="submit">Contact Sales</button>
+        </form>
+      </div>
+    </div>
   </div>
   </div>
 
