--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <div class="collapse" id="form-container">
       <div class="contact-form">
-        <form>
+        <form id="form-element">
           <div class="row form-group">
             <div class="col-md-6">
               <label>First Name</label>
@@ -109,16 +109,16 @@
           </div>
           <div class="form-group">
             <label>Work Email</label>
-            <input type="email" class="form-control" name="email_id" placeholder="jane.doe@example.com">
+            <input type="email" class="form-control" name="work_email" placeholder="jane.doe@example.com">
           </div>
           <div class="form-group">
             <label>Phone Number</label>
-            <input type="number" class="form-control" name="phone_no" placeholder="888-888-8888">
+            <input type="number" class="form-control" name="phone" placeholder="888-888-8888">
           </div>
           <div class="form-group">
             <label>Description</label>
-            <textarea class="form-control" placeholder="Please tell us about your requirements in detail"
-              rows="3"></textarea>
+            <textarea class="form-control" name="description"
+              placeholder="Please tell us about your requirements in detail" rows="3"></textarea>
           </div>
           <button type="submit">Contact Sales</button>
         </form>
