--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <div class="collapse" id="form-container">
       <div class="contact-form">
-        <form id="form-element">
+        <form id="contact-form">
           <div class="row form-group">
             <div class="col-md-6">
               <label>First Name</label>
