Estimation calculation fix

--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
           <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="500"
             data-slider-max="2500" data-slider-step="1" data-slider-value="0"
             data-slider-ticks="[500, 1000, 1500, 2000]"
-            data-slider-ticks-labels='["1-500", "500-1000", "1000-2000", "2000+"]' />
+            />
+            <div class="slider-label-container">
+                <span>1-500</span>
+                <span>500-1000</span>
+                <span>1000-2000</span> 
+                <span>2000+</span>
+            </div>
         </div>
       </div>
       <div>
