Minor UX improvement

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     </div>
 
     <div>
-      <button disabled data-toggle="collapse" href="#cost-container" aria-expanded="false"
-        aria-controls="cost-container" id="estimate-cta" onclick="getEstimate()">Get estimate</button>
+      <button disabled id="estimate-cta" onclick="getEstimate()">Get estimate</button>
     </div>
 
     <div class="collapse" id="cost-container">
