--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
           </div>
         </div>
         <div class="slider-container">
-          <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="500"
-            data-slider-max="2500" data-slider-step="10" data-slider-value="0" data-slider-ticks-snap-bounds="50"
-            data-slider-ticks="[500, 1000, 1500, 2000]"
+          <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="1"
+            data-slider-max="2500" data-slider-step="10" data-slider-value="1" data-slider-ticks-snap-bounds="50"
+            data-slider-ticks="[1, 500, 1000, 1500, 2000]"
             />
             <div class="slider-label-container">
                 <span>1-500</span>
                 <span>500-1000</span>
-                <span>1000-2000</span> 
+                <span>1000-1500</span>
+                <span>1500-2000</span>
                 <span>2000+</span>
             </div>
         </div>
