--- a/index.html
+++ b/index.html
@@ -84,15 +84,14 @@
         <div class="slider-container">
           <input type="text" id="message-count" data-slider-id='message-slider' data-slider-min="1"
             data-slider-max="2500" data-slider-step="10" data-slider-value="1" data-slider-ticks-snap-bounds="30"
-            data-slider-ticks="[1, 500, 1000, 1500, 2000]"
-            />
-            <div class="slider-label-container">
-                <span>1-500</span>
-                <span>500-1000</span>
-                <span>1000-1500</span>
-                <span>1500-2000</span>
-                <span>2000+</span>
-            </div>
+            data-slider-ticks="[1, 500, 1000, 1500, 2000]" />
+          <div class="slider-label-container">
+            <span>1-500</span>
+            <span>500-1000</span>
+            <span>1000-1500</span>
+            <span>1500-2000</span>
+            <span>2000+</span>
+          </div>
         </div>
       </div>
       <div>
@@ -103,6 +102,10 @@
     <div class="collapse" id="form-container">
       <div class="contact-form">
         <form id="contact-form">
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" id="email" class="form-control" name="email" placeholder="jane.doe@example.com">
+          </div>
           <div class="row form-group">
             <div class="col-md-6">
               <label>First Name</label>
@@ -112,10 +115,6 @@
               <label>Last Name</label>
               <input type="text" class="form-control" name="last_name" placeholder="Doe">
             </div>
-          </div>
-          <div class="form-group">
-            <label>Work Email</label>
-            <input type="email" class="form-control" name="work_email" placeholder="jane.doe@example.com">
           </div>
           <div class="form-group">
             <label>Phone Number</label>
