[Update] Git link added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 </head>
 
 <body>
+  <a target="_blank" href="https://github.com/manvendra22/sms-price-calculator" class="git-link">
+    <img src="./github.svg" alt="github-logo" class="icon-git" />
+  </a>
   <div class="app container">
     <h2>Flexible pricing model for your needs</h2>
     <h4>Select your countries on the map to begin</h4>
