[Refactored] Major refactored

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         </div>
       </div>
       <div>
-        <button id="slider-cta">View Pricing</button>
+        <button id="viewpricing-cta">View Pricing</button>
+        <button id="contactsales-cta">Contact Sales</button>
       </div>
     </div>
 
