--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Plivo App</title>
+  <title>SMS Price Calculator</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div>
-        <button id="viewpricing-cta">View Pricing</button>
+        <button id="viewpricing-cta" class="mr-4">View Pricing</button>
         <button id="contactsales-cta">Contact Sales</button>
       </div>
     </div>
