--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           <div class="form-group">
             <label>Email</label>
             <input type="email" id="email" class="form-control" name="email" placeholder="jane.doe@example.com">
+            <div class="small-text">* Please fill email to auto fill data</div>
           </div>
           <div class="row form-group">
             <div class="col-md-6">
