[Style] Minor improve

--- a/index.html
+++ b/index.html
@@ -50,20 +50,16 @@
     </h4>
     <div class="checkbox-container">
       <span>SMS Services: </span>
-      <span>
-        <label class="checkbox-label">
-          <input id="sendCheck" type="checkbox" value="receive" name="sms" />
-          <span class="checkbox-custom"></span>
-        </label>
-        <span class="input-title">Send messages</span>
-      </span>
-      <span>
-        <label class="checkbox-label">
-          <input id="receiveCheck" type="checkbox" value="send" name="sms">
-          <span class="checkbox-custom"></span>
-        </label>
-        <span class="input-title">Receive messages</span>
-      </span>
+      <label class="checkbox-label">
+        <input id="sendCheck" type="checkbox" value="receive" name="sms" />
+        <span class="checkbox-custom"></span>
+        <span class="checkbox-title">Send messages</span>
+      </label>
+      <label class="checkbox-custom">
+        <input id="receiveCheck" type="checkbox" value="send" name="sms">
+        <span class="checkbox-mark"></span>
+        <span class="checkbox-title">Receive messages</span>
+      </label>
     </div>
     <div id="selected" class="tag-container">
     </div>
