--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </h4>
     <div class="checkbox-container">
       <span>SMS Services: </span>
-      <label class="checkbox-label">
+      <label class="checkbox-custom">
         <input id="sendCheck" type="checkbox" value="receive" name="sms" />
-        <span class="checkbox-custom"></span>
+        <span class="checkbox-mark"></span>
         <span class="checkbox-title">Send messages</span>
       </label>
       <label class="checkbox-custom">
